<resources>
    <string name="app_name">About Me 1</string>
    <string name="name">Ketan Ramteke</string>
    <string name="profile_pic">Meri Photu</string>
    <string name="about_me">I am Ketan Ramteke. I Love to code. JS is my goto language these days, it\'s so fun</string>
    <string name="randomText"><![CDATA[Experiment with adding an ImageView above the TextView inside the ScrollView. When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up. Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView Below is a skeleton code version for this challenge. The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.]]></string>
    <string name="nicknameHint">Enter Your Nickname</string>
    <string name="doneBtn">Done</string>
</resources>